--- a/index.html
+++ b/index.html
@@ -4,35 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> ozone chain </title>
-    <meta tags=" ozone chain">
+    <title> animal chain </title>
+    <meta tags=" dog chain">
   </head>
 
   <body>
 <!--main website coding -->
     <h1>hello</h1>
     <p> hi i am <em>shivam</em></p>
-    <p1>this website is for cryoto <br> and we not like cryoto <strong>ozone chain crypto</strong></p1>
+    <p1>this website is for people <br> who likes like animals <strong>and there product</strong></p1>
     <br> <!--self closing tag br and hr br for break a line-->
     <hr size="3">
 <!--unorder list -->
     <ul>
-        <li>crypto </li>
-        <li>blockchain</li>
+        <li>dogs 1 </li>
+        <li>cats</li>
     </ul>
  <!--ordered list-->
     <ol>
-        <li>babu</li>
-        <li>chot motu</li>
+        <li>dog 1</li>
+        <li>dog 2 </li>
     </ol>
 <!--order list trype-->
     <ol type="i">
-        <li> bk chain</li>
-        <li> test chain</li>
+        <li> dog chain</li>
+        <li>dog toy </li>
     </ol>
 <!--image in website--> 
     <img src="image/dog1.jpg" alt="doggs">
-    
+    <br>
+   
 
 <!--table  desine have 3 things  1 tr table row,2 th table head ,3 td table data -->
     <table cellspacing="15">
