--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr size="3">
 <!--unorder list -->
     <ul>
-        <li>dogs 1 </li>
+        <li>dogs  </li>
         <li>cats</li>
     </ul>
  <!--ordered list-->
